[package]
name = "bevy_eventlistener_core"
version = "0.6.1"
edition = "2021"
description = "Event listeners and callbacks for bevy"
license = "MIT OR Apache-2.0"
repository = "https://github.com/aevyrie/bevy_eventlistener"
keywords = ["gamedev", "bevy", "eventlistener", "callbacks"]
categories = ["game-engines", "rendering"]

[dependencies]
bevy_ecs = { version="0.12", git = "https://github.com/Cupnfish/bevy.git", branch = "sprite-material-v2" }
bevy_app = { version="0.12", git = "https://github.com/Cupnfish/bevy.git", branch = "sprite-material-v2" }
bevy_utils = { version="0.12", git = "https://github.com/Cupnfish/bevy.git", branch = "sprite-material-v2" }
bevy_hierarchy = { version="0.12", git = "https://github.com/Cupnfish/bevy.git", branch = "sprite-material-v2" }

[features]
default = ["trace"]
trace = []
